Fixed roll template roll readability when darkmode is enabled

--- a/ADnD_2E_Revised/css/rolltemplates.css
+++ b/ADnD_2E_Revised/css/rolltemplates.css
@@ -23,6 +23,10 @@
 .sheet-rolltemplate-2Esave table {
     width: 100%;
 }
+
+.sheet-rolltemplate-darkmode .inlinerollresult {
+    color: rgb(255, 171, 0);
+}
 /*#endregion */
 
 /*#region Styles common to all 2E Template Headers */
@@ -531,5 +535,14 @@
 }
 .sheet-rolltemplate-2Egrenademiss .sheet-miss-text {
     font-size: 8pt;
+}
+
+.sheet-rolltemplate-2Egrenademiss .sheet-ignore-inlineroll .inlinerollresult {
+    background-color: inherit;
+    border: inherit;
+    color: #000000;
+    padding: 0;
+    font-weight: inherit;
+    font-size: inherit;
 }
 /*#endregion*/
